syntax = "proto3";

package moment;

option go_package='./pb';

message Moment {
  string id = 1;
  int64 createAt = 2;
  string catId = 3;
  repeated string photos = 4; // 图片url
  string title = 5;
  string text = 6;
  string communityId = 7;
  string userId = 8;
}

message SearchMomentByCommunityIdReq {
  int64 count = 1;
  int64 skip = 2;
  string communityId = 3;
  string keyword = 4;
}

message SearchMomentByMultiCommunityIdReq {
  int64 count = 1;
  int64 skip = 2;
  repeated string communityIds = 3;
  string keyword = 4;
}

message ListMomentByCommunityIdReq {
  string communityId = 1;
  int64 count = 2; // 获取的数量
  int64 skip = 3;
}

message ListMomentByMultiCommunityIdReq {
  repeated string communityIds = 1;
  int64 count = 2; // 获取的数量
  int64 skip = 3;
}

message ListMomentResp {
  repeated Moment moments = 1;
  int64 total = 2;
}

message ListMomentByUserIdReq {
  string userId = 1;
  int64 count = 2; // 获取的数量
  int64 skip = 3;
}

message RetrieveMomentReq {
  string momentId = 1;
}

message RetrieveMomentResp {
  Moment moment = 1;
}

message CreateMomentReq {
  Moment moment = 1;
}

message CreateMomentResp {
  string momentId = 1;
}

message UpdateMomentReq {
  Moment moment = 1;
}

message UpdateMomentResp {
}

message DeleteMomentReq {
  string momentId = 1;
}

message DeleteMomentResp {
}

service moment_rpc {
  rpc SearchMomentByCommunityId(SearchMomentByCommunityIdReq) returns (ListMomentResp);
  rpc SearchMomentByMultiCommunityId(SearchMomentByMultiCommunityIdReq) returns (ListMomentResp);
  rpc ListMomentByCommunityId(ListMomentByCommunityIdReq) returns (ListMomentResp);
  rpc ListMomentByMultiCommunityId(ListMomentByMultiCommunityIdReq) returns (ListMomentResp);
  rpc ListMomentByUserId(ListMomentByUserIdReq) returns (ListMomentResp);
  rpc RetrieveMoment(RetrieveMomentReq) returns (RetrieveMomentResp);
  rpc CreateMoment(CreateMomentReq) returns (CreateMomentResp);
  rpc UpdateMoment(UpdateMomentReq) returns (UpdateMomentResp);
  rpc DeleteMoment(DeleteMomentReq) returns (DeleteMomentResp);
}
